# censorship_hunter

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_v1.4.1.md  CONTRIBUTING.md  FLEXIBLE_FETCH_INTEGRATION.md  GITHUB_RELEASE_INSTRUCTIONS.md  LINKEDIN_POST_ENGLISH.md  LINKEDIN_POST_v1.1.0.md  LINKEDIN_POST_v1.1.0_FA.md  LINKEDIN_POST_v1.2.1_EN.md  LINKEDIN_POST_v1.2.1_FA.md  LINKEDIN_POST_v1.3.0.md  QUICK_MANUAL_RELEASE.md  QUICK_START.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.1.md  RELEASE_v1.2.1_SUMMARY.md  RELEASE_v1.2.2_SUMMARY.md  XCHANGELOG.md  __init__.py  create_release.ps1  create_release.sh  hunter_session.session-journal  launcher.py  main.py  orchestrator.py  orchestrator_flexible_integration.py  release_payload.json  requirements.txt  run.bat  setup.bat  setup.ps1  ssh_config_manager.py  start_hunter.bat  (+4 more)
.continue/: environments.json
config/: cache.py
core/: __init__.py  config.py  models.py  ollama_client.py  professional_validator.py  task_manager.py  thread_manager.py  utils.py
docs/: ADAPTIVE_MEMORY_MANAGEMENT.md  ADAPTIVE_THREAD_MANAGER_FIX_SUMMARY.md  ADEE_IMPLEMENTATION_SUMMARY.md  ALL_FIXES_SUMMARY.md  CHANGELOG.md  COMPLETE_FEATURE_INTEGRATION.md  COMPLETE_IMPROVEMENTS_REPORT.md  CRITICAL_FIXES_SUMMARY.md  FINAL_FIXES_SUMMARY.md  FLUTTER_UI_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTERACTIVE_TELEGRAM_AUTH.md  IRANIAN_DNS_SERVERS.md  MEMORY_LEAK_FIX.md  MULTIPROCESSING_FIX_SUMMARY.md  PARALLEL_OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_SUMMARY.md  PROXY_FALLBACK_GUIDE.md  PROXY_FALLBACK_SUMMARY.md  SSH_CACHING_FINAL_SUMMARY.md  SSH_CACHING_SETUP.md  SSH_CACHING_SUMMARY.md  TELEGRAM_AUTHENTICATION_FIX_SUMMARY.md  TELEGRAM_CONFIG_REPORTING.md  TELEGRAM_CREDENTIALS_GUIDE.md  TELEGRAM_REPORTING_SUMMARY.md  TEST_MODE_GUIDE.md  THREADING_FIXES_SUMMARY.md  WINDOWS_INSTALLATION_GUIDE.md  architecture_overview.md  build_artifacts_and_commands.md  dpi_bypass_guide.md  log_troubleshooting.md  operator_guide.md  v1.0.0_RELEASE_GUIDE.md
examples/: flexible_fetcher_example.py
gateway/: __init__.py
hunter_cpp/: CMakeLists.txt  build.bat  create_basic_icons.py  create_icons.py  create_icons_fixed.py  create_reliable_icons.py  create_windows_icons.py  huntercensor.exe.manifest  setup_fontawesome.py  test_download_sources.py  test_real_configs.py  test_working_sources.py
hunter_cpp/docs/: USER_GUIDE_EN.md  USER_GUIDE_FA.md  ui_implementation_summary.md
hunter_cpp/include/cache/: smart_cache.h
hunter_cpp/include/core/: config.h  constants.h  models.h  seed_data.h  task_manager.h  utils.h
hunter_cpp/include/network/: aggressive_harvester.h  continuous_validator.h  flexible_fetcher.h  http_client.h  proxy_tester.h  sys_proxy.h  uri_parser.h
hunter_cpp/include/orchestrator/: orchestrator.h  thread_manager.h
hunter_cpp/include/proxy/: load_balancer.h  runtime_engine_manager.h  xray_manager.h
hunter_cpp/include/realtime/: websocket_bridge.h
hunter_cpp/include/security/: dpi_evasion.h  obfuscation.h  packet_bypass.h  switch_bypass.h
hunter_cpp/include/telegram/: bot_reporter.h
hunter_cpp/include/testing/: benchmark.h
hunter_cpp/include/web/: dashboard.h  http_server.h
hunter_cpp/include/win32/: font_awesome.h  imgui_app.h  main_window.h  qr_code.h
hunter_cpp/src/: main.cpp
hunter_cpp/src/cache/: smart_cache.cpp
hunter_cpp/src/core/: config.cpp  models.cpp  seed_data.cpp  task_manager.cpp  utils.cpp
hunter_cpp/src/network/: aggressive_harvester.cpp  config_fetcher.cpp  continuous_validator.cpp  flexible_fetcher.cpp  http_client.cpp  proxy_tester.cpp  sys_proxy.cpp  uri_parser.cpp
hunter_cpp/src/orchestrator/: orchestrator.cpp  thread_manager.cpp
hunter_cpp/src/proxy/: load_balancer.cpp  load_balancer_impl.cpp  runtime_engine_manager.cpp  xray_manager.cpp
hunter_cpp/src/realtime/: websocket_bridge.cpp
hunter_cpp/src/security/: dpi_evasion.cpp  obfuscation.cpp  packet_bypass.cpp  switch_bypass.cpp  switch_bypass.h
hunter_cpp/src/telegram/: bot_reporter.cpp
hunter_cpp/src/testing/: benchmark.cpp
hunter_cpp/src/web/: dashboard.cpp  http_server.cpp
hunter_cpp/src/win32/: font_awesome.cpp  imgui_app.cpp  imgui_sources_page.cpp  main_window.cpp  qr_code.cpp  resource.h  resource.rc  win_main.cpp
hunter_cpp/tests/: test_core.cpp  test_ui_scenarios.md
hunter_flutter_ui/: .gitignore  README.md  build_flutter.bat  manual_build.bat  msvc_toolchain.cmake  pubspec.yaml
installer/: CREATE_INSTALLER_GUIDE.md  README.md  build_installer.bat  build_msi_com.ps1  build_nsis.bat  build_release.ps1  create_msi_installer.ps1  create_portable_bundle.ps1  hunter_installer.wxs  hunter_setup.iss  hunter_setup.nsi  refresh_staging_configs.py
native/android/app/src/main/cpp/: CMakeLists.txt  hunter_jni.cpp  orchestrator.cpp  orchestrator.h
native/android/app/src/main/cpp/cache/: cache.cpp  cache.h
native/android/app/src/main/cpp/core/: config.cpp  config.h  models.h  utils.cpp  utils.h
native/android/app/src/main/cpp/network/: http_client.cpp  http_client.h
native/android/app/src/main/cpp/parsers/: uri_parser.cpp  uri_parser.h
native/android/app/src/main/cpp/proxy/: load_balancer.cpp  load_balancer.h
native/android/app/src/main/cpp/security/: obfuscation.cpp  obfuscation.h
native/android/app/src/main/cpp/telegram/: scraper.cpp  scraper.h
network/: __init__.py  aggressive_harvester.py  continuous_validator.py  dpi_pressure.py  flexible_fetcher.py  http_client.py  strategy_selector.py
old/: old_hunter.py
parsers/: __init__.py  uri_parser.py
performance/: adaptive_thread_manager.py
proxy/: load_balancer.py
release_package/: PATCH_SUMMARY.md  README.md  check_environment.bat  start_hunter.bat  start_ui.bat
scripts/: diagnostic.py  enhanced_hunter.py  integrate_all_features.py  performance_optimizer.py  proxy_fallback.py  ssh_config_manager.py  ssh_tunnel_manager.py  telegram_config_reporter.py  update_secrets.py
security/: __init__.py  active_probe_defense.py  mtu_optimizer.py  (+9 more)
(+171 files in other folders)
